syntax = "proto3";

package pb;

option go_package = "MamangRust/echobloggrpc/internal/pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Comment {
    int32 id = 1;
    int32 id_post_comment = 2;
    string user_name_comment = 3;
    string comment = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CommentsRequest {
    
}

message CommentResponse {
    Comment comment = 1;
}

message CommentsResponse {
    repeated Comment comments = 1;
}

message CreateCommentRequest {
    int32 id_post_comment = 1;
    string user_name_comment = 2;
    string comment = 3;
}

message UpdateCommentRequest {
    int32 id = 1;
    int32 id_post_comment = 2;
    string user_name_comment = 3;
    string comment = 4;
}

message CommentRequest {
    int32 id = 1;
}

message DeleteCommentResponse {
    bool success = 1;
}

service CommentService {
    rpc CreateComment(CreateCommentRequest) returns (CommentResponse) {}
    rpc GetComments(google.protobuf.Empty) returns (CommentsResponse) {}
    rpc GetComment(CommentRequest) returns (CommentResponse) {}
    rpc UpdateComment(UpdateCommentRequest) returns (CommentResponse) {}
    rpc DeleteComment(CommentRequest) returns (DeleteCommentResponse) {}
}
